2007-12-31    Inge Wallin  <inge@lysator.liu.se>

	* src/ControlView.h (marbleControl): New function
	* src/lib/MarbleControlBox.{h,cpp} (updateMapThemes): New function
	(constructor): call updateMapThemes().
	* src/marble_part.cpp (showNewStuffDialog): update the map themes 
	list in the controlbox.
	(misc): cleaning
	* src/lib/MapTheme.cpp: cleaning
	* src/lib/MarbleModel.cpp: cleaning	

2007-12-31  Torsten Rahn  <rahn@kde.org>

    * src/plugins/navigator/CMakeLists.txt:
    - Fix MarbleNavigator Plugin

    Icons for projection combobox:
    * src/marble.qrc:
    * src/lib/MarbleControlBox.ui:
    * src/icons/map-flat.png:
    * src/icons/map-globe.png:


2007-12-31  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.h:
    * src/lib/MarbleModel.{cpp, h}:
    - Fixing the missing selection in the map view tab once
      the map setting gets restored. + Adding related API docs.

2007-12-31  Torsten Rahn  <rahn@kde.org>

    * lib/MeasureTool.cpp: Fixed partial disappearance of the 
      measureline east to the date line. 

2007-12-30  Torsten Rahn  <rahn@kde.org>

    * src/lib/VectorMap.cpp: Fixed last "turns-white" bug

2007-12-30    Inge Wallin  <inge@lysator.liu.se>

	Save and restore the current map theme in the settings.
	* src/marble.kcfg: add mapTheme as a setting of type string.
	* src/marble_part.cpp (readSettings): Read mapTheme
	(writeSettings): Write mapTheme
	* src/QtMainWindow.cpp (readSettings): Read mapTheme
	(writeSettings): Write mapTheme

2007-12-30  Torsten Rahn  <rahn@kde.org>

    - Fixed order of Feature appearance (still could
      have some fine tuning)
    - Changed QDataStream format to 4_2

    * src/lib/PlaceMarkLayout.cpp
    * src/lib/PlaceMarkContainer.cpp
    * src/lib/MarblePlacemarkModel.cpp
    * src/lib/PlaceMarkManager.cpp
    * src/lib/geodata/data/GeoDataFeature.cpp
    * data/placemarks/baseplacemarks.cache
    * data/placemarks/elevplacemarks.cache
    * data/placemarks/otherplacemarks.cache